--- a/План.md
+++ b/План.md
@@ -2,6 +2,7 @@ go
 Профилирование
 Флаги тестов, тестовые тэги, 
 фаззинг
+cgo
 рефлексия в go
 grpc
 бот
@@ -9,7 +10,6 @@ ebiten
 
 micro
 L3, L7 балансеры, 
-кубер
 Кафка
 паттерны межсервисного взаимодействия: Saga, Transactional Outbox, Circuit Breaker
 ElasticSearch
@@ -67,7 +67,7 @@ https://proglib.io/p/9-osnovnyh-patternov-dlya-proektirovaniya-raspredelennyh-si
 26 основных паттернов микросервисной разработки
 https://cloud.vk.com/blog/26-osnovnyh-patternov-mikroservisnoj-razrabotki/
 
-
+System Design 101
 https://habr.com/ru/articles/770564/
 
 
@@ -104,3 +104,4 @@ Building a Kafka Producer and Consumer in Go
 https://blog.indalyadav.com/building-a-kafka-producer-and-consumer-in-go
 How to Build a Real-Time Notification System with Go and Kafka
 https://www.freecodecamp.org/news/build-a-real-time-notification-system-with-go-and-kafka/#heading-lets-test-the-real-time-notification-system
+
