add modernize to testing steps note

--- a/golang/Среда и проект/Шаги тестирования.md
+++ b/golang/Среда и проект/Шаги тестирования.md
@@ -27,3 +27,8 @@ deadcode -test
 ```
 govulncheck ./...
 ```
+
+modernize - https://pkg.go.dev/golang.org/x/tools/gopls/internal/analysis/modernize
+```
+go run golang.org/x/tools/gopls/internal/analysis/modernize/cmd/modernize@latest -test ./...
+```
