--- a/вакансии.org
+++ b/вакансии.org
@@ -279,3 +279,37 @@ Logging: zero log, slog
 -Опыт с deploy инструментами Ansible/Puppet/Chef, Docker и т.д.
 -Понимание основ информационной безопасности.
 Контакты: https://careers.kaspersky.ru/vacancy/22887
+
+* С++ backend-разработчик в команду Транспорта.
+Компания рассматривает кандидатов только из России.
+З/п: обсуждается на интервью.
+Формат работы: Офис, Удаленка, Гибрид( Москва, Санкт-Петербург, Новосибирск);
+Уровень позиции: Senior
+❗️В работе используем C++, Golang. Основные расчётные бэкенды написаны на C++17, развитый CI, регулярные релизы и большие планы по развитию API.
+🔷Задачи:
+Разработка новых сервисов для бизнес задач построения маршрутов и логистических задач;
+Проектирование новых версий API и расширение возможностей существующего;
+Внедрение новых способов предрасчета данных.
+🔷Обязательные требования:
+Коммерческая разработка на C++17 и STL от 5 лет;
+NoSQL и SQL-базы данных;
+PostgreSQL, Kafka, Redis;
+Разработка сервисов в условиях распределенных систем на разных платформах — в первую очередь linux.
+Работа с высоконагруженными системами, микросервисной архитектурой и Docker;
+Умеете писать на Golang или хотите начать это делать.
+Отклики ждем @fr_rec
+* Senior Golang инженер
+Удаленно (Ярославль)
+
+RAFT —  компания, которая объединяет вместе команду из более сотни профессионалов с опытом реализации IT проектов международного уровня в партнерстве как с крупнейшими игроками отрасли, так и со стартап-компаниями на различных стадиях становления. 
+
+Требования:
+— Хорошо знает Go
+— Придерживается принципов KISS, DRY и SOLID
+— Работал с PostgreSQL
+— Применял в работе брокеры сообщений (Kafka/RabbitMQ)
+— Пишет аккуратный и понятный код с развёрнутыми комментариями
+— Знает методологии разработки, паттерны проектирования ПО
+— Знаком с Docker, k8s, Gitlab, Kibana, Prometheus
+
+➡️ Подробнее о вакансии на geekjob.ru (https://geekjob.ru/vacancy/67ff5d36e51e77f3870ce194)
