add note for pprof

--- a/golang/Среда и проект/профилирование с помощью pprof.org
+++ b/golang/Среда и проект/профилирование с помощью pprof.org
@@ -59,10 +59,13 @@ Showing top 10 nodes out of 87
 (pprof)
 #+end_src
 
-с помощью команды list можно посмотреть сколько затратил конкретный вызов в функции. Но нужно делать этот вызов в каталоге с файлом, где содержится код нужной функции
+с помощью команды =list= можно посмотреть сколько затратил конкретный вызов в функции. Но нужно делать этот вызов в каталоге с файлом, где содержится код нужной функции
 #+begin_src
 (pprof) list newToken
 #+end_src
+
+с помощью команды =web= можно посмотреть граф производительности.
+Если команда выполняется с ошибкой, нужно установить пакет graphviz
 
 - добавляем профайл через =-memprofile=
 #+begin_src
@@ -70,6 +73,12 @@ go test -bench=BenchmarkNearest -memprofile=pr1.pro
 #+end_src
 
 далее работаем аналогочино cpuprofile
+
+С помощью команды =http=
+#+begin_src
+go tool pprof -http :8081 p1.prof
+#+end_src
+можно открыть граф в браузере, что гораздо удобнее
 
 * Использование benchstat
 Чтобы уведить изменения в производительности нужно использовать =benchstat=
