--- a/План.md
+++ b/План.md
@@ -5,11 +5,13 @@ ebiten
 
 micro
 Кафка
+kafka connect
 паттерны межсервисного взаимодействия: Saga, Transactional Outbox, Circuit Breaker
 ElasticSearch
 nats - брокер сообщений
 
 DB
+minio
 Монго
 postrgess
 Clickhouse
