--- a/План.md
+++ b/План.md
@@ -48,3 +48,6 @@ https://blog.indalyadav.com/building-a-kafka-producer-and-consumer-in-go
 How to Build a Real-Time Notification System with Go and Kafka
 https://www.freecodecamp.org/news/build-a-real-time-notification-system-with-go-and-kafka/#heading-lets-test-the-real-time-notification-system
 
+# postrgess
+How I Work With PostgreSQL in Go
+https://www.alexisbouchez.com/blog/postgresql-in-go?utm_source=tg&utm_medium=go&utm_campaign=180525
