--- a/План.md
+++ b/План.md
@@ -17,6 +17,11 @@ postrgess
 Clickhouse
 оконные функции
 
+
+# sd
+System Design для начинающих: всё, что вам нужно
+https://habr.com/ru/articles/873388/
+
 # tarantool
 https://www.tarantool.io/ru/doc/latest/
 Начинаем работать с Tarantool
