--- a/План.md
+++ b/План.md
@@ -17,10 +17,16 @@ postrgess
 Clickhouse
 оконные функции
 
+Docker для Начинающих за 49 Мин
+https://www.youtube.com/live/0oke9VfRt2M
 
 # sd
 System Design для начинающих: всё, что вам нужно
 https://habr.com/ru/articles/873388/
+Архитектурные паттерны для высокой масштабируемости.
+https://habr.com/ru/articles/871500/
+26 основных паттернов микросервисной разработки
+https://cloud.vk.com/blog/26-osnovnyh-patternov-mikroservisnoj-razrabotki/
 
 # tarantool
 https://www.tarantool.io/ru/doc/latest/
