--- a/План.md
+++ b/План.md
@@ -9,6 +9,8 @@ kafka connect
 паттерны межсервисного взаимодействия: Saga, Transactional Outbox, Circuit Breaker
 ElasticSearch
 nats - брокер сообщений
+OpenAPI, proto, opai-codegen
+Keycloak
 
 DB
 minio
@@ -19,6 +21,9 @@ Clickhouse
 
 Docker для Начинающих за 49 Мин
 https://www.youtube.com/live/0oke9VfRt2M
+
+# python
+https://habr.com/ru/companies/ruvds/articles/905832/
 
 # sd
 System Design для начинающих: всё, что вам нужно
