add mongo notes

--- a/db/mongo_crud.org
+++ b/db/mongo_crud.org
@@ -325,3 +325,42 @@ db.c.find()
 > db.blog.posts.findOne(criteria, {"comments" : {"$slice" : -10}})// последние 10
 > db.blog.posts.findOne(criteria, {"comments" : {"$slice" : [23, 10]}}) // 10 штук начиная с 24
 #+end_src
+- фильтрация в элементах массива $elemMatch"
+#+begin_src js
+> db.blog.find({"comments" : {"$elemMatch" : {"author" : "joe", "score" : {"$gte" : 5}}}})
+#+end_src
+
+* Курсоры
+База данных возвращает результаты из метода =find=, используя курсор.
+Реализация курсоров на стороне клиента, как правило, позволяет в значительной степени контролировать конечный результат запроса.
+Чтобы перебрать результаты, можно использовать метод =next=. Можно воспользоваться методом =hasNext=, чтобы проверить, есть ли еще результат.
+#+begin_src js
+> while (cursor.hasNext()) {
+    obj = cursor.next();
+    // do stuff
+}
+#+end_src
+Класс =cursor= также реализует интерфейс итератора JavaScript, поэтому вы можете использовать его в цикле =forEach=:
+#+begin_src js
+> var cursor = db.people.find();
+> cursor.forEach(function(x) {
+...
+print(x.name);
+... });
+#+end_src
+Когда вы вызываете метод =find=, оболочка не запрашивает базу данных тотчас же. Она ждет, пока вы не начнете запрашивать результаты для отправки запроса, что позволит вам связать дополнительные параметры в запросе до его выполнения.
+
+В момент вызова =hasNext= запрос будет отправлен на сервер. Оболочка извлекает первые 100 результатов или первые 4 МБ результатов (в зависимости от того, что меньше), чтобы при последующих вызовах =next= или =hasNext= не нужно было совершать путешествие к серверу. После того как клиент выполнит первый набор результатов, оболочка снова свяжется с базой данных и запросит дополнительные результаты с помощью запроса =getMore=.
+
+Предел выдаваемых результатов
+#+begin_src js
+> db.c.find().limit(3)
+#+end_src
+Пропуск части результатов
+#+begin_src js
+> db.c.find().skip(3)
+#+end_src
+Сортировка результатов (1 - asc, -1 - desc)
+#+begin_src js
+> db.c.find().sort({username : 1, age : -1})
+#+end_src
