add job and golang todos

--- a/вакансии.org
+++ b/вакансии.org
@@ -548,3 +548,22 @@ Golang, entgo, PostgreSQL, Mongo, Kafka, OpenAPI, opai-codegen, GRPC, Gitlab CI,
 -Оформление по ТК РФ/ГПХ/СЗ/ИП (на ваш выбор);
 -Есть реально работающая служба заботы :)
 Контакты: apermineva@wmtgroup.ru
+
+* Старший Бэкенд-разработчик в команду ArchGovernance
+Компания: Авито
+Вам предстоит:
+-Анализировать метрики;
+-Взаимодействовать с продуктовыми командами разработки;
+-Поиск мест для улучшения при помощи метрик и исследования архитектуры;
+-Оперативно десантироваться в проблемные зоны в сервисах других команд и исправлять их;
+-Уметь проектировать правильную архитектуру и применять её на практике.
+
+Мы ждём, что вы:
+-Владеете Go или PHP и готовы развиваться в нём в дальнейшем;
+-Умеете работать с микросервисной архитектурой и распределёнными системами;
+-Умеете работать с SQL базами данных, в особенности с PostgreSQL;
+-Умеете работать с NoSQL решениями, как Redis;
+-Умеете фича лидить проекты и работать прозрачно;
+-Умеете работать с метриками;
+-Умеете писать автотесты (Unit и Integration) будет как преимущество.
+Контакты: https://career.avito.com/vacancies/razrabotka/15501/
