--- a/IT/ревью.org
+++ b/IT/ревью.org
@@ -87,3 +87,54 @@
 Плохое ревью – это «ну вроде норм», «там стиль поправь», «сделай красиво».
 Хорошее ревью – это диалог, наставничество, совместное улучшение кода.
 Ревью – это не поиск виноватого. Это коллективная инженерная зрелость.
+
+~Чек-лист для Code Review:~
+
+1. Архитектура и дизайн
+• Соответствует ли код общей архитектуре проекта?
+• Не нарушаются ли SOLID принципы?
+• Правильно ли выбраны абстракции и интерфейсы?
+
+2. Логика и корректность
+• Корректно ли реализована бизнес-логика?
+• Обрабатываются ли все edge cases?
+• Нет ли off-by-one ошибок в циклах?
+
+3. Безопасность кода
+• Правильно ли управляется память?
+• Нет ли потенциальных buffer overflow'ов?
+• Корректно ли обрабатываются исключения?
+
+4. Производительность
+• Нет ли ненужных копирований объектов?
+• Эффективны ли используемые алгоритмы?
+• Правильно ли используются контейнеры STL?
+
+5. Читаемость и поддерживаемость
+• Понятны ли названия переменных и функций?
+• Достаточно ли комментариев для сложной логики?
+• Не слишком ли сложные функции (соблюдается ли SRP)?
+
+6. Соответствие стандартам
+• Следует ли код style guide проекта?
+• Используются ли современные возможности C++?
+• Корректно ли оформлены заголовочные файлы?
+
+7. Тестирование
+• Покрыт ли новый код unit тестами?
+• Обновлены ли существующие тесты?
+• Протестированы ли edge cases?
+
+8. Документация
+• Обновлена ли документация API?
+• Есть ли примеры использования для новых функций?
+• Актуальны ли комментарии в коде?
+
+9. Обратная совместимость
+• нарушается ли API существующих компонентов?
+• Совместимы ли изменения с используемыми версиями библиотек?
+
+10. Финальная проверка
+• Проходят ли все автоматические тесты?
+• Нет ли compiler warnings?
+• Готов ли код к production?
